# neurofusion-ad

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  mri_only_50ep.yaml  multimodal_50ep.yaml  pet_only_50ep.yaml  smoke_mri_only.yaml  smoke_multimodal.yaml  smoke_pet_only.yaml
reports/: ds007561_50ep_model_comparison.md  ds007561_multimodal_smoke_vs_50ep.md  visual_results_summary.md
reports/figures/evaluation/: evaluation_manifest.json
reports/figures/evaluation_50ep/: evaluation_manifest.json
reports/figures/evaluation_50ep_mri_only/: evaluation_manifest.json
reports/figures/evaluation_50ep_pet_only/: evaluation_manifest.json
reports/figures/explainability/: atlas_region_summary.json  figure_selection_manifest.json
reports/figures/explainability_50ep/: atlas_region_summary.json  figure_selection_manifest.json
reports/figures/latent_space/: latent_space_manifest.json
reports/figures/latent_space_50ep/: latent_space_manifest.json
reports/figures/latent_space_50ep_mri_only/: latent_space_manifest.json
reports/figures/latent_space_50ep_pet_only/: latent_space_manifest.json
scripts/: compare_50ep_runs.py  compare_experiments.py  compare_multimodal_runs.py  evaluate.py  generate_evaluation_figures.py  run_visual_analysis.py  train.py  validate_dataset.py
src/neurodegenerative_pet_mri_ai/: __init__.py
src/neurodegenerative_pet_mri_ai/data/: __init__.py  bids.py  dataset.py  preprocessing.py
src/neurodegenerative_pet_mri_ai/evaluation/: metrics.py  runner.py
tests/: test_bids_scanner.py  test_validation_pipeline.py
(+14 files in other folders)
